# ROS-Project

./: .bashrc  .gitignore
Docker/: Dockerfile  README.md  apt-list.txt  docker-compose.yml  pip-list  rebuild.ps1  volume_init.sh
Docker/backup/: README.md  docker-backup.ps1
Omron Ace/Spraycoater/: Spraycoater.awp2
Spraycoater/: frames_2025-11-05_19.08.01.gv  frames_2026-01-12_14.16.27.gv
Spraycoater/data/logs/: crash.dump
Spraycoater/data/recipes/: wafer_top_meander.yaml
Spraycoater/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Spraycoater/log/: latest_build
Spraycoater/resource/config/: logging.yaml  planner_catalog.yaml  plc.yaml  recipe_catalog.yaml  recipe_params.yaml  recipes.yaml  startup.yaml
Spraycoater/resource/ui/: process_tab.ui  (+2 more)
Spraycoater/src/: main_gui.py  main_window.py  startup_fsm.py
ws_moveit/: build_log.txt  compile_commands.json  out.txt  ros-rolling-rviz-common_15.1.11-1noble.debian.tar.xz  ros-rolling-rviz-common_15.1.11-1noble.dsc
ws_moveit/omron_moveit_config/: CMakeLists.txt  package.xml
ws_moveit/spraycoater_bringup/: package.xml  setup.py
ws_moveit/spraycoater_nodes_cpp/: CMakeLists.txt
ws_moveit/spraycoater_nodes_cpp/include/spraycoater_nodes_cpp/: topics_loader.hpp
ws_moveit/spraycoater_nodes_cpp/src/: servo.cpp
ws_moveit/spraycoater_nodes_py/: package.xml  setup.cfg
ws_moveit/src/embedded_rviz/: CMakeLists.txt  package.xml
ws_moveit/src/embedded_rviz/include/embedded_rviz/: host.hpp
ws_moveit/src/embedded_rviz/resource/ui/: embedded_rviz.ui
ws_moveit/src/embedded_rviz/scripts/: my_rviz.py  pyqt_embed_rviz  pyqt_embed_rviz_ui
ws_moveit/src/embedded_rviz/src/: host.cpp  panel_demo.cpp  pybind.cpp  pybind_module.cpp
ws_moveit/src/mecademic_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws_moveit/src/mecademic_bringup/config/: active_tool.txt  bringup.rviz  current_workpiece.txt  fixed_positions.yaml  frames.yaml  paths.yaml  poses.yaml  scene.yaml  servo.yaml  spray_paths.yaml  substrate_mounts.yaml  substrates.yaml  tools.yaml  topics.yaml
ws_moveit/src/mecademic_bringup/launch/: bringup.launch.py  robot.launch.py  robot_with_tool.launch.py
ws_moveit/src/mecademic_bringup/mecademic_bringup/: motion_manager.py  mount_manager.py  poses_manager.py  robot_runner.py  scene_manager.py  servo_teleop.py  spawn_mesh.py  spawn_platform.py  spray_path_manager.py  teleopt_servo.py  tool_manager.py  trajectory_manager.py  utils.py  workpiece_manager.py
ws_moveit/src/mecademic_bringup/mecademic_bringup/common/: __init__.py  frames.py  params.py  qos.py  topics.py
ws_moveit/src/mecademic_bringup/mecademic_bringup/scene/: mesh_manager.py  object_registry.py  scene_loader.py  scene_manager_node.py  spray_path_manager.py  utils.py
ws_moveit/src/mecademic_bringup/mecademic_bringup/tools/: __init__.py  base_plugin.py  base_tool.py  spray_nozzle_01.py  spray_nozzle_02.py  tool_manager.py
ws_moveit/src/mecademic_bringup/mecademic_bringup/tools/plugins/: __init__.py  none.py  spray_nozzle_01.py  spray_nozzle_02.py
ws_moveit/src/mecademic_bringup/recipes/: circle_demo_helix.yaml
ws_moveit/src/mecademic_bringup/resource/environment/: cage_closed_0_5m.stl  cage_closed_1m.stl
ws_moveit/src/mecademic_bringup/resource/substrates/: cube_100.stl  cube_150.stl  cylinder_d100_h100.stl  cylinder_d150_h150.stl  cylinder_d200_h200.stl  pyramid_d150_h150.stl  stl_center_folder.py  tube_ID10mm_t1p5mm_h100mm.stl  tube_ID20mm_t1p5mm_h100mm.stl  tube_ID5mm_t1p5mm_h100mm.stl  wafer_d100_h2.stl  wafer_d150_h2.stl  wafer_d200_h2.stl
ws_moveit/src/mecademic_bringup/spray_paths/: circle.yaml
ws_moveit/src/mecademic_bringup/world/: base_platform_200x200x50.stl
ws_moveit/src/mecademic_description/: CMakeLists.txt  package.xml
ws_moveit/src/mecademic_description/launch/: display.launch.py
ws_moveit/src/mecademic_description/meshes/: spray_nozzle.STL
ws_moveit/src/mecademic_description/rviz/: meca_display.rviz
ws_moveit/src/mecademic_description/tools/: spray_nozzle_01.stl
ws_moveit/src/mecademic_description/urdf/: meca_500_r3.urdf.xacro  meca_500_r3_with_tool.xacro
ws_moveit/src/mecademic_description/urdf/tools/: spray_nozzle_01.xacro  spray_nozzle_02.xacro
ws_moveit/src/mecademic_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_moveit/src/mecademic_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  meca_500_r3.ros2_control.xacro  meca_500_r3.srdf  meca_500_r3.urdf.xacro  meca_mount.yaml  moveit.rviz  moveit_controllers.yaml  moveit_planning_pipelines.yaml  ompl_planning.yaml  planning_pipelines.yaml  ros2_controllers.yaml  servo_params.yaml
ws_moveit/src/mecademic_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveitpy.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws_moveit/src/omron_viper_description/: CMakeLists.txt  package.xml
ws_moveit/src/omron_viper_description/launch/: display.launch.py
ws_moveit/src/omron_viper_description/meshes/tools/: Sonotek_AccuMist.stl
ws_moveit/src/omron_viper_description/rviz/: omron_display.rviz
ws_moveit/src/omron_viper_description/urdf/: omron_viper.urdf.xacro
ws_moveit/src/spraycoater_nodes_cpp/: package.xml
ws_moveit/src/spraycoater_nodes_cpp/launch/: servo.launch.py
ws_moveit/src/spraycoater_nodes_cpp/scripts/: test_servo.sh
ws_moveit/src/spraycoater_nodes_py/: package.xml  setup.py
ws_moveit/src/spraycoater_nodes_py/spraycoater_nodes_py/: motion.py  moveitpy_node.py  omron_robot.py  omron_tcp_bridge.py  poses.py  robot.py  scene.py  servo.py  spray_path.py
ws_moveit/src/spraycoater_nodes_py/spraycoater_nodes_py/robot/: base.py  joint_mapping.py  omron.py  omron_interpreter.py  omron_tcp_bridge.py  omron_tcp_client.py  sim.py
ws_moveit/src/spraycoater_nodes_py/spraycoater_nodes_py/tools/: base_tool.py  tool_manager.py
ws_moveit/src/spraycoater_nodes_py/spraycoater_nodes_py/utils/: frames.py  omron_tcp_client.py  utils.py
(+359 files in other folders)
