<?xml version="1.0"?>
<package format="3">
  <name>embedded_rviz</name>
  <version>0.1.0</version>
  <description>Embed RViz2 RenderPanel as a QWidget and use it inside a PyQt5 window.</description>

  <maintainer email="you@example.com">Vinc</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>

  <!-- Qt5 Widgets direkt genutzt -->
  <build_depend>Qt5Widgets</build_depend>
  <exec_depend>Qt5Widgets</exec_depend>

  <!-- Für das Python-Frontend -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-sip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
