<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecademic_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt config for Meca 500 R3</description>

  <maintainer email="vi851mik@htwg-konstanz.de">vincent</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Minimal erforderlich -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mecademic_description</exec_depend>

  <!-- Optional – nur falls deine Launches sie tatsächlich starten -->
  <!-- <exec_depend>rviz2</exec_depend> -->
  <!-- <exec_depend>moveit_ros_move_group</exec_depend> -->
  <!-- <exec_depend>moveit_servo</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
