<?xml version="1.0"?>
<package format="3">
  <name>omron_viper_description</name>
  <version>0.1.1</version>
  <description>URDF/Xacro and meshes for the Omron Adept Viper S650 robot</description>

  <maintainer email="vinc@example.com">Vinc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps: für Launch + Anzeige -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
