<?xml version="1.0"?>
<package format="3">
  <name>spraycoater_nodes_cpp</name>
  <version>0.1.0</version>
  <description>Mecademic runtime nodes (C++)</description>

  <maintainer email="miklv75@googlemail.com">miklv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- MoveIt -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_servo</depend>

  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
